syntax = "proto3";

package blog;

service BlogService {
  rpc Create (CreateRequest) returns (CreateResponse);
  rpc PostComment (PostCommentRequest) returns (PostCommentResponse);
  rpc GetAll (GetAllRequest) returns (GetAllResponse);
}

message CreateRequest {
  string author = 1;
  string title = 2;
  string description = 3;
  repeated string images = 4; 
}

message Blog {
  string _id = 1;
  string author = 2;
  string title = 3;
  string description = 4;
  repeated string images = 5;
  repeated Comment comments = 6;
  repeated string likes = 7;
  string createdAt = 8;
  string updatedAt = 9;
}

message CreateResponse {
  Blog blog = 1;
  string message = 2;
}

message Comment {
  string author = 1;
  string text = 2;
  string createdAt = 3;
  string updatedAt = 4;
}

message PostCommentRequest {
  string blogId = 1;
  string author = 2;
  string text = 3;
}

message PostCommentResponse {
  Blog blog = 1;
  string message = 2;
}

message GetAllRequest {}

message GetAllResponse {
  repeated Blog blogs = 1;
}